force-app/main/default/objects/Unit__c/fields/Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Type__c</fullName>
    <label>Challenge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hands_On_Challenge</fullName>
                <label>Hands On Challenge</label>
            </value>
            <value>
                <fullName>Multiple_Choice</fullName>
                <label>Multiple Choice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>