force-app/main/default/objects/Unit__c/fields/Time_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Time_Estimated__c</fullName>
    <label>Time Estimated</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>