force-app/main/default/objects/Unit__c/fields/Unit_Score__c.field-meta.xml
<CustomField>
    <fullName>Unit_Score__c</fullName>
    <label>Unit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>